bugfix: banner-text z-index conflict (#32)
* fixed banner-text vs primary-nav z-index conflict

* added code comment

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -25,6 +25,8 @@ section h2 {
   min-height: 30vh;
   position: relative;
   overflow: hidden;
+  /* prevents .banner-text from overlapping with primary-nav dropdown on wide viewport widts */
+  isolation: isolate;
 }
 
 .banner picture {
